solved the divs collapse issue by adding a min block size of 25 px to the children of the container div

--- a/style.css
+++ b/style.css
@@ -24,4 +24,5 @@ body {
 #container > *{
     background:white;
     border:solid 1px black;
+    min-block-size: 25px;
 }
